# ONE-Community-Edition

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  ROADMAP.md  one.py  pyproject.toml
src/one/: model.py  version.py
templates/: inventario.one  tareas.one
